<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="visible">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/item_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextItemURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        />

</LinearLayout>